--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                         <div class="row"  id="portfolio">
                                             <div class="col-xs-12 col-sm-3 appsDevelopment">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">Cloud computing</a>
+                                                    <a href="Lession/Cloud Computing/cloud_computing_tutorial.pdf">Cloud computing</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 GraphicDesign">
@@ -454,7 +454,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-3 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">Linux</a>
+                                                    <a href="Lession/Cloud Computing/Chapter 04 AWS EC2.pdf">- AWS EC2 Advanced</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
@@ -474,7 +474,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">(000000)</a>
+                                                    <a href="Lession/Cloud Computing/Chapter 05 Simple Storage Service (S3).pdf">- Simple Storage Service (S3)</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
