--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
              <section id="portfolio-section" class="page bg-style1">
             	<div class="container">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-11">
                             <div class="portfolio">
                                 <!-- Begin page header-->
                                 <div class="page-header-wrapper">
@@ -425,7 +425,7 @@
                                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                                             <h2>Works</h2>
                                             <div class="devider"></div>
-                                            <p class="subtitle">What we are proud of</p>
+                                            <p class="subtitle">PNC Assignment</p>
                                         </div>
                                     </div>
                                 </div>
@@ -444,52 +444,191 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">System-Admin</a>
+                                                    <a href="#">System-Administrator</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 webDesign websites">
                                                 <div class="portfolio_single_content">
-                                                    <a href="Lession/PL/sumary.txt">ProfessionalLife</a>
+                                                    <a href="Lession/PL/sumary.txt">ProfessionalLife Summary</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 GraphicDesign">
                                                 <div class="portfolio_single_content">
-                                                    <a href="Lession/Cloud Computing/Chapter 04 AWS EC2.pdf">- AWS EC2 Advanced</a>
+                                                    <a href="Lession/Cloud Computing/Chapter 04 AWS EC2.pdf">AWS EC2 Advanced</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">Server Message Block (SMB)</a>
+                                                    <a href="#">_____________?</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">File Transfer Protocol (FTP)</a>
+                                                    <a href="Lession/System-Administrator/Chapter 04 Web Application Server.pdf">Web Application Server</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">Explain keyword</a>
+                                                    <a href="Lession/PL/Lesson 1 - Information Management & Critical Reading.pptx.pdf">Information Management & Critical Reading</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="Lession/Cloud Computing/Chapter 05 Simple Storage Service (S3).pdf">- Simple Storage Service (S3)</a>
+                                                    <a href="Lession/Cloud Computing/Chapter 05 Simple Storage Service (S3).pdf">Simple Storage Service (S3)</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">(000000)</a>
+                                                    <a href="#">_____________?</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">(000000)</a>
+                                                    <a href="Lession/System-Administrator/Mail Server (Exchange 2016).pdf">Mail Server (Exchange 2016)</a>
                                                 </div>
                                             </div>
                                             <div class="col-xs-12 col-sm-3 responsive">
                                                 <div class="portfolio_single_content">
-                                                    <a href="#">(000000)</a>
+                                                    <a href="Lession/PL/Critical Thinking.pptx.pdf">Critical Thinking</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/Cloud Computing/Chapter 06 AWS VPC - Basics.pdf">AWS Virtual Private Cloud (VPC)</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/System-Administrator/DNS Server.pdf">DNS Server</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Lesson 3 - Problem Solving & SWOT Analysis.pptx.pdf">Problem Solving and SWOT Analysis</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/System-Administrator/Chapter 08 Backup and Recovery.pdf">Backup and Recovery</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Internship Preparation.pptx.pdf">Internship Preparation</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/System-Administrator/Install and Configure Domain Controller.pdf">Install and Configure DC</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Lesson 5 - Marketing - Basic Selling.pptx.pdf">Marketing – Basic Selling</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div><div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/System-Administrator/Basic Script in Domain Controller.pdf">Basic Script in DC</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Lesson 6 - Organization.pptx.pdf">Organization</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/System-Administrator/Group Policy.pdf">Group Policy</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Lesson Plan.docx.pdf">Job Preparation & Internship Support</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/System-Administrator/Managing Access to Resource.pdf">Managing Access to Resource</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Lesson 8 - Active Listening at Workplace.pptx.pdf">Active Listening at Workplace</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="#">_____________?</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-3 responsive">
+                                                <div class="portfolio_single_content">
+                                                    <a href="Lession/PL/Lesson 9 - Money Literacy for College Studys.pptx.pdf">Money Literacy for College Students</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -514,7 +653,7 @@
                                         <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                                             <h2>Our Works</h2>
                                             <div class="devider"></div>
-                                            <p class="subtitle">What we are proud of</p>
+                                            <p class="subtitle">My general job</p>
                                         </div>
                                     </div>
                                 </div>
@@ -868,10 +1007,10 @@
 			                            <li><i class="fa fa-phone"></i>&nbsp; (+855) 0316167666</li>
 			                            <li><i class="fa fa-envelope"></i> sareth.kh056@gmail.com</li>
 			                            <li><i class="fa fa-skype"></i> Sareth Saroeurn</li>
-                                        <li><i class="fa fa-meet"></i>https://meet.google.com/awt-urfy-qvc</li>
 			                        </ul>
                                 </div>
                             </div>
+                            
                         
                         	<div class="col-sm-6">
                                 <div class="contact-form">
