--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <!-- Cta Button -->
                         <div class="extra-space-l"></div>
                         <div class="text-center">
-                    		<a class="btn btn-default btn-lg-xl" href="http://www.imransdesign.com/" target="_blank" role="button">Large Button</a>
+                    		<a class="btn btn-default btn-lg-xl" href="https://wertyu.netlify.app/" target="_blank" role="button">Personal Rules</a>
                         </div>
                     </div> <!-- /.container -->                       
                 </div>
