--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<a class="btn btn-blank" href="https://www.facebook.com/zin.wk.9/" target="_blank" role="button">View More!</a>
 							</div>
 							<div class="item">
-								<h1>Gamer</h1>
+								<h1>YOUTUBE CHANNEL</h1>
 								<p>Subscribe to my channel</p>
 								<div class="extra-space-l"></div>
 								<a class="btn btn-blank" href="https://www.youtube.com/channel/UC3CuhluQHz0GSIrY5cPONpA" target="_blank" role="button">View More!</a>
